--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,11 +1,20 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
     "rootDir": "src",
-    "composite": false
+    "module": "commonjs",
+    "target": "es2020",
+    "lib": ["es2020", "dom"],
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "baseUrl": "./src"
+    // "composite": false, // Se elimina ya que no se usa extends y no hay project references directas aquí
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
