--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aguayodevs-utilities/frontforge",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "description": "CLI y librería para generar y compilar micro-frontends (Preact) con servidor de express para app monorepositorio.",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -31,11 +31,13 @@
     "change-case": "^5.4.4",
     "execa": "^9.5.2",
     "fs-extra": "^11.3.0",
+    "inquirer": "^8.2.6",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
     "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^8.2.6",
     "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
