--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aguayodevs-utilities/frontforge",
-  "version": "1.3.5",
+  "version": "1.3.3",
   "description": "CLI y librería para generar y compilar micro-frontends (Preact) con servidor de express para app monorepositorio.",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -46,6 +46,7 @@
     "globals": "^16.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0"
+    "typescript-eslint": "^8.32.0",
+    "@types/swagger-jsdoc": "^6.0.4"
   }
 }
